feat: add header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 </head>
 
 <body>
+  <header class="header">
+    <nav class="header__nav">
+      <div class="container">
+        <ul class="header__menu">
+          <li class="header__menu-item"><a href="#about" class="header__menu-link">About me</a></li>
+          <li class="header__menu-item"><a href="#skills" class="header__menu-link">Skills</a></li>
+          <li class="header__menu-item"><a href="#examples" class="header__menu-link">Examples</a></li>
+          <li class="header__menu-item"><a href="#education" class="header__menu-link">Education</a></li>
+          <li class="header__menu-item"><a href="#languages" class="header__menu-link">Languages</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
 </body>
 
