feat: add main and section profile

--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
     </nav>
   </header>
 
+  <main class="main">
+    <div class="container">
+      <section class="profile">
+        <div class="profile__descr">
+          <h1 class="title">Anna Spiridovich</h1>
+          <h2 class="subtitle">Front-end developer</h2>
+          <div class="profile__contacts">
+            <div class="email"><a href="mailto:aspirido4@gmail.com" class="profile__email">aspirido4@gmail.com</a>
+            </div>
+            <div class="phone"><a href="tel:+79396381551" class="profile__phone">+7 937-638-15-51</a></div>
+          </div>
+        </div>
+        <div class="profile__photo">
+          <img src="assets/icons/Avatar.png" alt="photo">
+        </div>
+      </section>
+    </div>
+  </main>
+
 </body>
 
 </html>
