--- a/index.html
+++ b/index.html
@@ -42,7 +42,59 @@
           <img src="assets/icons/Avatar.png" alt="photo">
         </div>
       </section>
-    </div>
+
+      <div class="wrapper">
+        <div class="wrapper__left">
+          <div class="contacts block-left">
+            <h2 class="contacts__header subtitle">Contacts:</h2>
+            <div class="contacts__body">
+              <div class="contats__body-item">
+                <a href="https://t.me/an_spi" class="contacts__telegram">Telegram</a>
+              </div>
+              <div class="contats__body-item">
+                <a href="https://github.com/Anna-spi" class="github">GitHub</a>
+              </div>
+              <div class="contats__body-item">
+                <a href="#" class="contacts__dis">Discord: Annyni#7177</a>
+              </div>
+            </div>
+          </div>
+          <div id='education' class="education block-left">
+            <h2 class="education__header subtitle">Education:</h2>
+            <div class="education__body">
+              <div class="education__body-university">POVOLZHSKY INSTITUTE OF MANAGEMENT NAMED AFTER P.A. STOLYPIN</div>
+              <div class="education__body-course">
+                <h2 class="subtitle">Udemy:</h2>
+                <ul class="education_body-list">
+                  <li class="education_body-item"><a href="https://www.udemy.com/course/webdeveloper/"
+                      class="education_body-link">WEB-developer
+                      2021</a></li>
+                  <li class="education_body-item"><a href="https://www.udemy.com/course/intensive-js/"
+                      class="education_body-link">Intensive
+                      JavaScript</a></li>
+                  <li class="education_body-item"><a href="https://www.udemy.com/course/javascript_full/"
+                      class="education_body-link">JavaScript +
+                      React</a> (in
+                    process...)</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div id="languages" class="languages block-left">
+            <h2 class="languages__header subtitle">Languages:</h2>
+            <div class="languages__body">
+              <ul class="languages__body-list">
+                <li class="languages__body-item"><span class="bold">Russian</span> - native speaker</li>
+                <li class="languages__body-item"><span class="bold">English</span> - <span class="bold">A1</span> (in
+                  process...)</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper__right">
+
+        </div>
+      </div>
   </main>
 
 </body>
