feat: add block-right

--- a/index.html
+++ b/index.html
@@ -92,10 +92,79 @@
           </div>
         </div>
         <div class="wrapper__right">
+          <div id='about' class="about block-right">
+            <h2 class="about__header subtitle subtitle__right">About me:</h2>
+            <div class="about__body about__body-right">
+              <p>For my life I a few times encountered programming. But I wasn't ready dive into this sphere fully.
+                After
+                the period and the events of my life, I suddenly realized that’s exactly what I want to do.</p>
+              <p>My goal is to become a required Front-end developer. There are very smart people here. Every one of
+                whom
+                has a full personality, with his or her knowledge and skills.
+              </p>
+              <p>Every day to grow and develop in his profession and meet interesting people and become involved in
+                exciting projects?</p>
+              <span><q>- Yeah, I think I do!</q></span>
+            </div>
+          </div>
+          <div id='skills' class="skills block-right">
+            <h2 class="skills__header subtitle subtitle__right">Skills:</h2>
+            <div class="skills__body">
+              <div class="skills__list">
+                <dl>
+                  <dt class="skills__list-html">
+                    HTML
+                  </dt>
+                  <dd class="level">
+                    <div style="width: 92%;">92%</div>
+                  </dd>
+
+                  <dt class="skills__list-css">
+                    CSS
+                  </dt>
+                  <dd class="level">
+                    <div style="width: 88%;">88%</div>
+                  </dd>
+
+                  <dt class="skills__list-js">
+                    JavaScript
+                  </dt>
+                  <dd class="level">
+                    <div style="width: 30%;">30%</div>
+                  </dd>
+
+                  <dt class="skills__list-git">
+                    Git
+                  </dt>
+                  <dd class="level">
+                    <div style="width: 79%;">79%</div>
+                  </dd>
+                </dl>
+              </div>
+            </div>
+          </div>
+          <div id="examples" class="examples block-right">
+            <h2 class="examples__header subtitle subtitle__right">Code Examples:</h2>
+            <div class="examples__body">
+              <div class="examples__body-descr"><span class="bold">Description:</span> Determine the area of the largest
+                square that can fit inside a circle
+                with radius r.</div>
+              <div class="examples__body-code">
+                <pre><code>                  <span class="examples__color-orange">function</span> <span class="examples__color-blue">areaLargestSquare</span> <span class="examples__color-yellow">(</span>r<span class="examples__color-yellow">)</span> {
+                    <span class="examples__color-orange">let</span> diametr = r * 2;
+                    diametr = <span class="examples__color-violet">(</span>diametr * diametr<span class="examples__color-violet">)</span> / 2;
+                    <span class="examples__color-pink">return</span> diametr; 
+                  }
+                </code></pre>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
+    </div>
   </main>
+
 
 </body>
 
