feat: add wrapper__footer

--- a/index.html
+++ b/index.html
@@ -159,7 +159,27 @@
               </div>
             </div>
           </div>
-
+          <div class="wrapper__footer">
+            <h2 class="subtitle subtitle__right">Examples works:</h2>
+            <div class="examples__works">
+              <div class="examples__works-item">
+                <div class="round">
+                  <a href="https://github.com/Anna-spi/Uber" class="examples__works-link">
+                    <img src="assets/img/works/uber.png" alt="uber" class="examples__works-img">
+                    <p class="examples__works-descr">Uber</p>
+                  </a>
+                </div>
+              </div>
+              <div class="examples__works-item">
+                <div class="round">
+                  <a href="https://github.com/Anna-spi/Pulse" class="examples__works-link">
+                    <img src="assets/img/works/pulse.png" alt="pulse" class="examples__works-img">
+                    <p class="examples__works-descr">Pulse</p>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
