--- a/index.html
+++ b/index.html
@@ -185,7 +185,16 @@
     </div>
   </main>
 
-
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__wrapper">
+        <div class="footer__year">© 2022 by Anna Spiridovich</div>
+        <a href="https://github.com/Anna-spi" class="footer__github github">GitHub</a>
+        <a href="https://rs.school/js/" class="footer__logo"><img src="assets/svg/rs_school_js.svg" alt="rsschool"
+            class="footer__logo-img"></a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
